--- a/login.html
+++ b/login.html
@@ -35,8 +35,14 @@
 
 			<div class="content-card">
 				<form action="">
-					<input type="text" class="input-login" placeholder="Digite seu login ou CPF" required>
-					<input type="password" class="input-login" placeholder="Digite sua senha" required>
+					<div class="inputs-form">
+						<input type="text" class="input-login" placeholder="Digite seu login ou CPF" required>
+						<input type="password" class="input-login" placeholder="Digite sua senha" required>
+					</div>
+					<div class="button-action">
+						<span class="forgot-password">Esqueci minha senha</span>
+						<span class="login-button">Entrar</span>
+					</div>
 				</form>
 			</div>
 		</div>
